// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`goInitializeNotificatonPreferences notifications not stored in localStorage selectes the agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications not stored in localStorage selectes the tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications stored in localStorage puts the audio notification into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "audioNotifications": true,
        "type": "app/AgentNotificationsMenu/SET_AUDIO_NOTIFICATIONS_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications stored in localStorage puts the visual notification into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/AgentNotificationsMenu/SET_VISUAL_NOTIFICATIONS_PREFERENCE",
        "visualNotifications": true,
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications stored in localStorage selectes the agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications stored in localStorage selectes the tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goInitializeNotificatonPreferences notifications stored in localStorage uses the tenant and agent id to get the items from localStorage 1`] = `
Array [
  Array [
    "skylightAudioNotifications-tenantId-agentId",
  ],
  Array [
    "skylightVisualNotifications-tenantId-agentId",
  ],
]
`;

exports[`goToggleAudioNotificationsPreference gets the current audio notification 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleAudioNotificationsPreference puts the inverse of it 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "audioNotifications": false,
        "type": "app/AgentNotificationsMenu/SET_AUDIO_NOTIFICATIONS_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleAudioNotificationsPreference selectes the agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleAudioNotificationsPreference selectes the tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleAudioNotificationsPreference uses the tenant and agent id to set the notification in localStorage 1`] = `
Array [
  Array [
    "skylightAudioNotifications-tenantId-agentId",
    false,
  ],
]
`;

exports[`goToggleVisualNotificationsPreference does have notification permission gets the current visual notification 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does have notification permission puts the inverse of it 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/AgentNotificationsMenu/SET_VISUAL_NOTIFICATIONS_PREFERENCE",
        "visualNotifications": false,
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does have notification permission selectes the agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does have notification permission selectes the tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does have notification permission uses the tenant and agent id to set the notification in localStorage 1`] = `
Array [
  Array [
    "skylightVisualNotifications-tenantId-agentId",
    false,
  ],
]
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is granted upon request requests permission 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is granted upon request selectes the agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is granted upon request selectes the tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is granted upon request sets the notification to true 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/AgentNotificationsMenu/SET_VISUAL_NOTIFICATIONS_PREFERENCE",
        "visualNotifications": true,
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is granted upon request uses the tenant and agent id to set the notification in localStorage 1`] = `
Array [
  Array [
    "skylightVisualNotifications-tenantId-agentId",
    true,
  ],
]
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is not granted upon request adds error 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "error": Object {
          "code": "AD-1006",
        },
        "interactionFatal": undefined,
        "type": "app/Errors/SET_NON_CRITICAL_ERROR",
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleVisualNotificationsPreference does not have notification permission permission is not granted upon request requests permission 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;
